--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,9 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.off {
+  display:none;
+}
 @media (max-width: 500px) {
   .container {
     width: 90%;
